# pdr-deep-learning

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
conf/: application.yaml  logging.conf  logging.yaml
docs/: py01-env.md  py02-poetry.md  py04-cuda.md  py05-keras.md  py06-tensorflow.md  py07-torch.md
rest/: config.py  mapper.py  server.py
rest/mapper/: mymapp.py  pgmapp.py
src/: cnn-bilstm-att.py  cuda-by-tf.py  cuda-by-torch.py  keras-learning-.py  keras-learning.py  numpy-learning.py
web/: urls.py  views.py
