[tool.poetry]
name = "pdrdeeplearning"
version = "0.1.0"
description = ""
authors = ["pdrsnow <229269179@qq.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.3.0+cu118", source = "torch" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 清华的镜像有问题, 某些包无法下载
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"
